# Computer-Network-Project

./: .gitignore  CMakeLists.txt  LICENSE  README.md
client/: CMakeLists.txt  main.cpp
client/include/: ConnectingScreen.hpp  Constants.hpp  HandleFeature.hpp  Mail.hpp  MainMenu.hpp  MenuScreen.hpp  Screen.hpp  StartScreen.hpp  SubMenu.hpp  UICore.hpp  Utils.hpp
client/src/: ConnectingScreen.cpp  HandleFeature.cpp  Mail.cpp  MainMenu.cpp  MenuScreen.cpp  Screen.cpp  StartScreen.cpp  SubMenu.cpp  UICore.cpp  Utils.cpp  test.cpp
server/: CmakeLists.txt  main.cpp
server/include/: File.hpp  Keylogger.hpp  Process.hpp  RequestHandler.hpp  Response.hpp  VideoRecording.hpp  WindowCommand.hpp
server/src/: File.cpp  Keylogger.cpp  Process.cpp  RequestHandler.cpp  VideoRecording.cpp  WindowCommand.cpp  main.cpp
